kubernetes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: js-app
  labels:
    app: js-app
spec:
  selector:
    matchLabels:
      app: js-app
  replicas: 2
  template:
    metadata:
      labels:
        app: js-app
    spec:
      containers:
      - name: js-container
        image: id-wall-sol
        imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          periodSeconds: 3
          failureThreshold: 1
          timeoutSeconds: 1
