kubernetes/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: js-app
  labels:
    app: js-app
spec:
  containers:
  - name: js-container
    image: id-wall-sol
