kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: js-service
spec:
  selector:
    app: js-app
  ports:
  - name: js-service
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
