kubernetes/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost.js-idwall
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: js-service
                port:
                  number: 3000
